# SSD-Universal-Engine

./: cmake_universal.txt  ssd_universal_dll.h
Release/: neuro_core.lib  neuro_ssd_bridge.lib  ssd_core_only.exp  ssd_core_only.lib  ssd_unified_engine.exp  ssd_unified_engine.lib
ssd_align_leap_dll/: CMakeLists.txt  ssd_align_leap_dll.cpp  ssd_align_leap_dll.h
ssd_core/: CMakeLists.txt  ssd.md
ssd_core/api/: ssd_api.cpp  ssd_api.h
ssd_core/bridge/: neuro_ssd_bridge.cpp  neuro_ssd_bridge.h
ssd_core/core/: neuro_core.cpp  neuro_core.h  ssd_core.cpp  ssd_core.h
ssd_universal_dll/: CMakeLists.txt  SSDUniversalEngineConfig.cmake.in  benchmark.cpp  build_instructions.md  ssd_universal_dll.cpp  ssd_universal_engine.pc.in  ssd_universal_engine_dll.cpp  ssd_universal_engine_dll.patch  test_basic.cpp  test_c_api.c  test_npc.cpp
